--- a/server/package.json
+++ b/server/package.json
@@ -21,12 +21,14 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^15.12.1",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.3.2"
   }
 }
