--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.+(ts|tsx|js|jsx|json)\"",
     "start": "node dist/index.js"
   },
-  "author": "saswatamcode",
+  "author": "yonatangross",
   "license": "MIT",
   "dependencies": {
     "apollo-server-express": "^2.25.0",
